--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ footer{
   /* margin: 0 auto; */
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.604);
+  box-shadow: -1px 7px 0px rgb(0 0 0);
   justify-content: space-around;
 }
 
