--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,10 +214,12 @@
 /* Text Styles */
 .item-code {
   font-size: 29px;
-  font-weight: bold;
+  font-weight: 800;
   margin-bottom: 10px;
   letter-spacing: 2px;
   padding-top: 28px;
+  text-transform: uppercase;
+  color: #111439;
 }
 
 .product-name {
