--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -176,10 +176,11 @@
   
   /* Text Styles */
   .item-code {
-    font-size: 26px;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: 800;
     letter-spacing: 2px;
     margin: 0;
+    text-transform: uppercase;
   }
   
   .product-name {
