--- a/assets/css/responsivenavbar.css
+++ b/assets/css/responsivenavbar.css
@@ -28,6 +28,7 @@
         background-color: #242424;
         padding: 20px;
         text-align: center;
+        z-index: 9999;
     }
   
     .nav-links li {
