--- a/assets/css/responsivenavbar.css
+++ b/assets/css/responsivenavbar.css
@@ -52,9 +52,19 @@
     .separation-line{
         width: 319px;
         height: 1px;
-        margin: 20px 0;
+        margin: 25px 0;
     }
     .contact-us{
         flex-direction: column;
+    }
+    .contact-text{
+        font-size: 16px;
+    }
+    .contact-container{
+        margin-right: 10px;
+    }
+    .main-logo{
+        margin: 0;
+        width: 200px;
     }
   }
