--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -102,12 +102,12 @@ textarea {
 
 .submit-btn {
   float: right;
-    padding: 7px 35px;
+    padding: 10px 35px;
     text-align: center;
-    border-radius: 60px;
+    border-radius: 17px;
     display: inline-block;
     background-color: #111438;
-    color: #FAAB18;
+    color: #ffaf1b;
     font-size: 25px;
     cursor: pointer;
     font-weight: 500;
@@ -116,6 +116,8 @@ textarea {
     -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
     letter-spacing: 5px;
+    outline: none !important;
+    border: none !important;
 }
 
 .submit-btn:hover {
