--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -42,7 +42,7 @@ margin-bottom: 10px;
 .paragraph{
     text-align: justify;
     width: 90%;
-    font-size: larger;
+    font-size: x-large;
     font-weight: 600;
     color: rgb(196, 196, 196);
     letter-spacing: 2px;
