--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 main {
     width: 100%;
-    height: 100vh;
+    height: max-content;
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -34,16 +34,38 @@ main {
 .heading{
     font-size: 50px;
     font-weight: 700;
-    margin-top: 21px;
+    margin-top: 51px;
 margin-bottom: 10px;
-    color: rgb(221, 221, 221);
+    color: rgb(252, 252, 252);
     letter-spacing: 10px;
+    text-align: left;
 }
 .paragraph{
-    text-align: center;
-    width: 80%;
-    font-size: 22px;
+    text-align: left;
+    /* width: 80%; */
+    font-size: 21px;
     font-weight: 600;
-    color: rgb(196, 196, 196);
+    color: rgb(255, 255, 255);
     letter-spacing: 2px;
+}
+
+.text{
+    width: 80%;
+}
+
+@media (max-width: 768px){
+    .heading{
+        font-size: 40px;
+    }
+    .paragraph{
+        font-size: 18px;
+        width: 90%;
+        text-align: left;
+    }
+
+    .text{
+        width: 90%;
+    }
+        
+    
 }
