--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #444442;
+  background-image:
+  linear-gradient(to right, rgba(0, 0, 0, 0.886), rgba(0, 0, 0, 0.908), rgba(0, 0, 0, 0.914), rgba(0, 0, 0, 0.936)),
+  url('../images/main/istockphoto-1469411565-2048x2048.jpg');
 }
 
 h1 {
