--- a/assets/css/headerfooter.css
+++ b/assets/css/headerfooter.css
@@ -29,7 +29,7 @@ li {
     display: flex;
     justify-content: space-around !important;
     align-items: center;
-    background-color: #242424;
+    background-color: #070819;
     padding: 0 20px;
     height: 100px;
     width: 100%;
@@ -101,7 +101,7 @@ li {
 footer {
     width: 100%;
     height: 530px;
-    background-color: #0b0d29;
+    background-color: #070819;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,6 +117,7 @@ footer {
 .footer-left {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .qr-code {
@@ -137,9 +138,9 @@ footer {
     max-width: 424px;
     height: 322px;
     /* margin: 0 auto; */
-    padding: 42px;
+    padding: 15px;
     border-radius: 60px;
-    box-shadow: inset 0px 1px 20px 8px rgb(0 0 0);
+    /* box-shadow: inset 0px 1px 20px 8px rgb(0 0 0); */
     justify-content: space-around;
 }
 
@@ -149,12 +150,12 @@ footer {
 }
 
 .contact-item i {
-    font-size: 24px;
+    font-size: 37px;
     color: #fba70c;
     margin-right: 15px;
 }
 
 .contact-text {
-    font-size: 20px;
+    font-size: 24px;
     color: #ffffff;
 }
