--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -25,7 +25,7 @@ main {
     width: 100%;
     height: 100%;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.737), rgb(0, 0, 0)), 
-                url('../images/main/new\ about.jpg') no-repeat center center;
+                url('../images/main/new-about.jpg') no-repeat center center;
     background-size: cover;
     z-index: -1;
 }
